<resources>
    <string name="app_name">EzbillVisionD</string>
    <string name="account">account/username</string>
    <string name="password">password</string>
    <string name="check_password">Remember Me</string>
    <string name="check_login">Keep Me Logged In</string>
    <string name="login">login</string>
    <string name="loading">loading</string>
    <string name="searchTextHint">Search Subject Code or Name</string>
    <string name="search">Search</string>
    <string name="filter">filter</string>
    <string name="switchAI">SwitchAI</string>
    <string name="Subjects">Subjects</string>
    <string name="Picture">Picture</string>
    <string name="Profile">My Profile</string>
    <string name="bills">Bills</string>
    <string name="Me">Me</string>
    <string name="Sort">Sort</string>
    <string name="Course">Course</string>
    <string name="Trend">Trend</string>
    <string name="arrow_down_desc">pop down</string>
    <string name="TextView">TextView</string>
    <string name="textview">TextView</string>
    <string name="SubjectAvartar">Subject Avartar</string>
    <string name="office">Office</string>
    <string name="title_activity_find_route">FindRouteActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="subjects">Subjects</string>
    <string name="unimap">UniMap</string>
    <string name="me">Me</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="unimelb_motto">Welcome to EzbillVision.</string>
    <string name="signup">SIGNUP</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username">Username</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="take_a_picture">TAKE A PICTURE</string>
</resources>